# adya-hackathon

./: .gitignore  GEMINI.md  MCP_SERVER_INTEGRATION_GUIDE.md  README.md
mcp_servers/python/clients/: README.md  config.json  mcp_client.py  requirements.txt  response of mysql_mcp.txt  run.py
mcp_servers/python/clients/src/: server_connection.py  (+2 more)
mcp_servers/python/servers/AIVEN_MCP_SERVER/mcp_aiven/: pyproject.toml
mcp_servers/python/servers/AIVEN_MCP_SERVER/mcp_aiven/src/mcp_aiven/: server.py
mcp_servers/python/servers/DISCORD_MCP_SERVER/mcp_discord/: pyproject.toml
mcp_servers/python/servers/DISCORD_MCP_SERVER/mcp_discord/src/mcp_discord/: __init__.py  server.py  utils.py
mcp_servers/python/servers/ELASTICSEARCH_MCP_SERVER/mcp_elasticsearch/: README.md  pyproject.toml
mcp_servers/python/servers/ELASTICSEARCH_MCP_SERVER/mcp_elasticsearch/src/mcp_elasticsearch/: __init__.py  server.py
mcp_servers/python/servers/ELASTICSEARCH_MCP_SERVER/mcp_elasticsearch/src/mcp_elasticsearch/clients/: __init__.py  base.py
mcp_servers/python/servers/ELASTICSEARCH_MCP_SERVER/mcp_elasticsearch/src/mcp_elasticsearch/clients/common/: alias.py  client.py  cluster.py  document.py  general.py  index.py
mcp_servers/python/servers/ELASTICSEARCH_MCP_SERVER/mcp_elasticsearch/src/mcp_elasticsearch/tools/: __init__.py  alias.py  cluster.py  document.py  general.py  index.py
mcp_servers/python/servers/PANDAS_MCP_SERVER/pandas-mcp-server/: README.md  pyproject.toml
mcp_servers/python/servers/PANDAS_MCP_SERVER/pandas-mcp-server/src/pandas_mcp_server/: server.py
mcp_servers_documentation/: DOCUMENTATION_GUIDE.md
mcp_servers_documentation/AIVEN_MCP_SERVER/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/DISCORD_MCP_SERVER/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/ELASTICSEARCH_MCP_SERVER/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/MYSQL_MCP_SERVER/: credentials.md  demo_videos.md  security.md  server_features.md
mcp_servers_documentation/PANDAS_MCP_SERVER/: credentials.md  demo_videos.md  server_features.md
postman_api_collections/: MCP.postman_collection.json
(+7 files in other folders)
