[project]
name = "mcp-aiven"
version = "0.1.4"
description = "An MCP server for Aiven."
requires-python = ">=3.11"
dependencies = [
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
     "uvicorn>=0.34.0",
     "aiven-client>=4.5.1",
]

[project.scripts]
mcp-aiven = "mcp_aiven:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_aiven"]
