[project]
name = "mcp-discord"
version = "0.1.0"
description = "An MCP server for Discord."
requires-python = ">=3.11"
dependencies = [
     "mcp[cli]>=1.3.0",
     "python-dotenv>=1.0.1",
     "uvicorn>=0.34.0",
     "discord.py>=2.3.2",
]

[project.scripts]
mcp-discord = "mcp_discord:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_discord"]
