[project]
name = "mcp-elasticsearch"
version = "0.1.0"
description = "An MCP server for Elasticsearch."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.1",
    "elasticsearch>=8.17.2",
    "fastmcp>=2.8.0",
]

[project.scripts]
mcp-elasticsearch = "mcp_elasticsearch:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_elasticsearch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
